--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,37 @@
     transform: rotate(360deg);
   }
 }
+
+.carousel-wrapper {
+  max-width: 600px;
+  margin:20px auto;
+  padding: 0 20px
+}
+
+.image__name {
+  padding: 0 70px;
+  margin: 10px;
+  text-align: center;
+  display: inline-block;
+}
+
+.header {
+  overflow: hidden;
+  background-color: #dddddd;
+  padding: 20px 10px;
+}
+
+.header h1 {
+  color: black;
+  text-align: center;
+  padding: 12pxx;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+header h1.header__logo {
+  font-size: 25px;
+  font-weight: bold;
+}
